[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
runty8 = { path = "../src/runty8" }
runty8-runtime = { path = "../src/runty8-runtime" }
glow = "0.11.2"
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "WebGl2RenderingContext", "Window", "console", "Document"]}
winit = "0.26"
log = "0.4"
console_log = "0.2"
instant = { version = "0.1", features = ["wasm-bindgen"] }

[[bin]]
name = "celeste"
path = "./celeste/main.rs"

[[bin]]
name = "confetti"
path = "./confetti/main.rs"

[[bin]]
name = "moving-box"
path = "./moving-box/main.rs"
