[package]
name = "examples"
version = "0.1.0"
edition = "2021"
default-run = "editor-assets"

[dependencies]
runty8 = { path = "../src/runty8" }
runty8-core = { path = "../src/runty8-core" }
log = "0.4"

[[bin]]
name = "celeste"
path = "./celeste/main.rs"

[[bin]]
name = "confetti"
path = "./confetti/main.rs"

[[bin]]
name = "moving-box"
path = "./moving-box/main.rs"

[[bin]]
name = "bresenham"
path = "./bresenham/main.rs"

[[bin]]
name = "stress-lines"
path = "./stress-lines/main.rs"

[[bin]]
name = "standalone-game"
path = "./standalone-game/main.rs"

[[bin]]
name = "editor-assets"
path = "./editor-assets/main.rs"
