[package]
name = "standalone-game"
version = "0.1.0"
edition = "2021"

[dependencies]
runty8 = { path = "../../src/runty8" }
glow = "0.11.2"
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "WebGl2RenderingContext", "Window", "console", "Document"]}
winit = "0.26"
log = "0.4"
console_log = "0.2"
console_error_panic_hook = "0.1.7"
instant = { version = "0.1", features = ["wasm-bindgen"] }
