[package]
name = "runty8-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
itertools = "0.10"
include_dir = "0.7"
paste = "1.0"
log = "0.4"

[build-dependencies]
embed-resource = "2.1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-bindgen = "0.2"
getrandom = { version = "*", features = ["js"] }
console_log = "0.2"
console_error_panic_hook = "0.1"
