[package]
name = "runty8-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
runty8-core = { path = "../runty8-core" }
runty8-winit = { path = "../runty8-winit" }
runty8-event-loop = { path = "../runty8-event-loop" }
itertools = "0.10"
instant = "0.1"
once_cell = "1.16"
log = "0.4"
arboard = "3.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
js-sys = { version = "0.3" }
wasm-bindgen = "0.2"
