[package]
name = "runty8-event-loop"
version = "0.1.0"
edition = "2021"

[dependencies]
runty8-core = { path = "../runty8-core" }
runty8-winit = { path = "../runty8-winit" }
winit = "0.27"
glow = "0.11"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "WebGl2RenderingContext", "Window", "console", "Document"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.29"
instant = { version = "0.1" }
