[package]
name = "runty8-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runty8-core = { path = "../runty8-core" }
runty8-winit = { path = "../runty8-winit" }
runty8-event-loop = { path = "../runty8-event-loop" }
glium = "0.31"
