[package]
name = "runty8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runty8-core = { path = "../runty8-core" }
runty8-runtime = { path = "../runty8-runtime" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
runty8-editor = { path = "../runty8-editor" }
